--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -6,6 +6,9 @@ FROM ubuntu:latest
 RUN apt-get update && apt-get install -y python3 python3-pip
 RUN pip3 install python-telegram-bot --upgrade && pip3 install -r requierments.txt
 
+#setup work enviorment
+RUN mkdir app && cp . /app
+WORKDIR /app
 #create the directory for the vouchers
 RUN mkdir Vouchers
 
