--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,9 +1,8 @@
 #syntax=docker/dockerfile:1
 
-FROM ubuntu:latest
+FROM python:latest
 #install dependencies
 
-RUN apt-get update && apt-get install -y python3 python3-pip
 RUN pip3 install python-telegram-bot --upgrade && pip3 install -r requierments.txt
 
 #setup work enviorment
@@ -13,4 +12,4 @@ WORKDIR /app
 RUN mkdir Vouchers
 
 #start the application
-CMD ./10bisbot.py
+CMD ./app/10bisbot.py
